# modu

./: .gitignore  CHANGELOG.md  CITATION.cff  LICENSE  README.md  __init__.py  __main__.py  core.py  pyproject.toml
.github/workflows/: publish.yml  test.yml
src/py_modu/: __init__.py  __main__.py  core.py
tests/: test_core.py
