[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "py-modu"
version = "0.1.1"
description = "A Go-like CLI runner for Python projects — type `pyrun .` instead of `python3 script.py`"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
authors = [
    { name = "Chibueze Maxwell", email = "maxwellchibuezecharles@gmail.com" }
]
keywords = ["cli", "developer-tools", "python", "golang", "runner", "productivity"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Build Tools",
    "Topic :: Utilities",
]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=7.0", "build", "twine"]

[project.urls]
Homepage = "https://github.com/maxchichar/py-modu"
Repository = "https://github.com/maxchichar/py-modu"
Issues = "https://github.com/maxchichar/py-modu/issues"
Changelog = "https://github.com/maxchichar/py-modu/blob/main/CHANGELOG.md"

[project.scripts]
pyrun = "py_modu.core:main"

[tool.setuptools.packages.find]
where = ["src"]
